# cpp

advices/: advices.pro
advices/advice_10/: advice_10.pro  main.cpp
advices/advice_11/: main.cpp
advices/advice_13/: advice_13.pro  main.cpp
advices/advice_14/: advice_14.pro  main.cpp
advices/advice_15/: main.cpp
advices/advice_16/: main.cpp
advices/advice_17/: main.cpp
advices/advice_18/: advice_18.pro  main.cpp
advices/advice_19/: main.cpp
advices/advice_20/: main.cpp
advices/advice_23/: main.cpp
advices/advice_24/: main.cpp
advices/advice_25/: main.cpp
advices/advice_26/: main.cpp
advices/advice_27/: advice_27.pro  main.cpp
advices/advice_28/: main.cpp
advices/advice_8/: advice_8.pro  main.cpp
advices/stl_advice_1/: main.cpp
algorithms/algorithms/: sorting_algorithms.hpp
algorithms/lee_wave_find/: glmain.cpp  glmain.h  lee_wave_find.pro  main.cpp
algorithms/quickSort/: main.cpp  quickSort.pro
algorithms/shellSort/: main.cpp  shellSort.pro
algorithms/sortAlg_p1/: application.cpp  application.hpp  bubbleanimate.cpp  bubbleanimate.hpp  insertanim.cpp  insertanim.hpp  selectanimate.cpp  selectanimate.hpp  sortAlg_p1.pro
algorithms/sortAlg_p1_cmp/: bubblesort.cpp  bubblesort.hpp  insertionsort.hpp  main.cpp  selectionsort.cpp  selectionsort.hpp  sortAlg_p1_cmp.pro
beginning/: .gitignore  beginning.pro  beginning.pro.user.fd1f00b
beginning/lesson_38/different_compilers_test/icc/: CMakeLists.txt
cpp_17_features/: cpp_17_features.pro
graphs/: graphs.pro
patterns/: patterns.pro
qtWidgets/: qtWidgets.pro
(+446 files in other folders)
